--- a/public/docs.html
+++ b/public/docs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#FFFFFF">
-    <title>Documentation - JHON FORUM Mail</title>
+    <title>Documentation - JHON Mail</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -267,7 +267,7 @@
         </a>
         
         <div class="user-avatar">
-            <img src="https://cdn.odzre.my.id/cpz.jpg" alt="Profile">
+            <img src="295a6dc7f4efe03269d55d35a91668d3.jpg" alt="Profile">
         </div>
     </header>
 
