--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <div class="top-bar">
         <div class="app-name">TempMail</div>
         <div class="user-avatar">
-            <img src="295a6dc7f4efe03269d55d35a91668d3.jpg" alt="User">
+            <img src="https://image2url.com/r2/default/images/1771137994717-01aa46ca-b9b8-4848-a42a-17b00471b49e.jpg" alt="User">
         </div>
     </div>
 
