--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
         </div>
     </div>
 
+    <!-- Loading Indicator Global -->
+    <div id="globalLoading" class="global-loading" style="display: none;">
+        <div class="loading-spinner"></div>
+    </div>
+
     <main id="main-container">
         
         <!-- HOME SECTION -->
@@ -39,7 +44,7 @@
                 <label>Email Kamu Saat Ini</label>
                 <div class="email-display">
                     <span id="emailAddress">Generating...</span>
-                    <button onclick="copyEmail()" class="copy-btn"><i class="bi bi-copy"></i></button>
+                    <button onclick="copyEmail()" class="copy-btn" id="copyEmailBtn"><i class="bi bi-copy"></i></button>
                 </div>
                 <div class="status-indicator">
                     <span class="dot"></span> <span id="timerText">Auto-refresh: 10s</span>
@@ -51,11 +56,17 @@
         <section id="view-inbox" class="tab-view">
             <div class="section-header">
                 <h2>Riwayat Inbox</h2>
-                <button onclick="clearInbox()" class="trash-btn" title="Hapus Semua Pesan">
+                <button onclick="clearInbox()" class="trash-btn" id="clearInboxBtn" title="Hapus Semua Pesan">
                     <i class="bi bi-trash3"></i>
                 </button>
             </div>
             <div id="readList" class="message-list"></div>
+            <!-- Loading Skeleton untuk Inbox -->
+            <div id="readListSkeleton" class="skeleton-list" style="display: none;">
+                <div class="skeleton-card"></div>
+                <div class="skeleton-card"></div>
+                <div class="skeleton-card"></div>
+            </div>
         </section>
 
         <!-- UPDATES SECTION (UNREAD MESSAGES) -->
@@ -64,6 +75,12 @@
                 <h2>Update Baru <span class="badge" id="badge-count" style="display:none">0</span></h2>
             </div>
             <div id="unreadList" class="message-list"></div>
+            <!-- Loading Skeleton untuk Updates -->
+            <div id="unreadListSkeleton" class="skeleton-list" style="display: none;">
+                <div class="skeleton-card"></div>
+                <div class="skeleton-card"></div>
+                <div class="skeleton-card"></div>
+            </div>
         </section>
 
         <!-- DOCS SECTION -->
@@ -116,7 +133,7 @@
         </div>
 
         <div class="nav-fab-wrapper">
-            <div class="nav-fab" onclick="confirmNewEmail()">
+            <div class="nav-fab" onclick="confirmNewEmail()" id="newEmailFab">
                 <i class="bi bi-plus-lg"></i>
             </div>
         </div>
@@ -169,7 +186,7 @@
             </p>
 
             <div class="share-options">
-                <button onclick="shareAsImage()" class="share-option" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                <button onclick="shareAsImage()" class="share-option" id="shareImageBtn" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
                     <i class="bi bi-image"></i>
                     <div class="share-option-text">
                         <strong>Share Gambar</strong>
@@ -232,6 +249,21 @@
             <div class="capture-footer">
                 <div>Temporary Email | JHON FORUM</div>
                 <div class="capture-time">© 2024 TempMail - Privasi Terjaga</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- MODAL ERROR/CONFIRMATION CUSTOM -->
+    <div id="confirmModal" class="modal confirm-modal" style="display: none;">
+        <div class="modal-content confirm-content">
+            <div class="confirm-icon">
+                <i class="bi bi-question-circle"></i>
+            </div>
+            <h3 id="confirmTitle">Konfirmasi</h3>
+            <p id="confirmMessage">Apakah Anda yakin?</p>
+            <div class="confirm-buttons">
+                <button onclick="confirmAction(false)" class="confirm-btn cancel">Batal</button>
+                <button onclick="confirmAction(true)" class="confirm-btn ok">Ya</button>
             </div>
         </div>
     </div>
